# RMNG-OS

./: .gitignore  LICENSE  LICENSE.kernel-patches  README.md
agents/: Cargo.toml  README.md
agents/definitions/: README.md  browser-researcher.yaml  kernel-engineer.yaml  repo-keeper.yaml  research-curator.yaml  runtime-executor.yaml  swarm-coordinator.yaml  system-health.yaml  web-researcher.yaml
agents/nervous/: README.md
agents/rmng-cli/: Cargo.toml
agents/rmng-cli/src/: audit_cmd.rs  health.rs  llm_cmd.rs  main.rs  observe.rs
agents/rmng-cli/tests/: health_validate_e2e.rs
agents/rmng-core/: Cargo.toml
agents/rmng-core/src/: allowlist.rs  audit.rs  budget.rs  config.rs  continuation.rs  cost_rollup.rs  daemon_request.rs  dispatch.rs  error.rs  intent.rs  ipc.rs  lib.rs  orchestration.rs  permission.rs  readiness.rs  registry.rs  resource_rollup.rs  response.rs  session.rs  tool.rs  validator.rs
agents/rmng-core/src/tools/: exec.rs  git.rs  github.rs  kernel.rs  mod.rs
agents/rmng-mcp/: Cargo.toml
agents/rmng-mcp/src/: capabilities.rs  client.rs  error.rs  isolation.rs  lib.rs  metrics.rs  seccomp.rs
agents/rmng-mcp/tests/: resource_metrics_integration.rs
agents/rmng-nervous/: Cargo.toml
agents/rmng-nervous/src/: agent.rs  chain.rs  connector.rs  continuation.rs  layer.rs  lib.rs  mock.rs  nervous_audit.rs  ollama.rs  orchestration_prompt.rs  router.rs  skill.rs
agents/rmng-nervous/src/providers/: anthropic.rs  backoff.rs  catalog.rs  circuit_breaker.rs  cost.rs  defaults.rs  discovery.rs  factory.rs  google.rs  matrix.rs  mod.rs  ollama.rs  openai_compat.rs  prompt.rs  reason.rs  types.rs
agents/rmng-nervous/tests/: chain_hop_policy_e2e.rs  chain_parse_e2e.rs  continuation_e2e.rs  fallback_chain_e2e.rs  fetch_e2e.rs  handoff_e2e.rs  live_llm_chain_e2e.rs  live_llm_chain_matrix.rs  live_llm_e2e.rs  live_llm_live_helpers.rs  live_llm_return_e2e.rs  mcp_e2e.rs  mem0_e2e.rs  playwright_e2e.rs  provider_matrix.rs  providers.rs  sandbox_e2e.rs  security_isolation_e2e.rs  testing_workflow_e2e.rs
agents/rmngd/: Cargo.toml
agents/rmngd/src/: continuation_locks.rs  lib.rs  main.rs  orchestration.rs  startup.rs
agents/rmngd/tests/: continuation_daemon_e2e.rs  continuation_socket_e2e.rs  validate_e2e.rs
agents/schemas/: README.md  core-intent.schema.json  git-diff.intent.json  git-status.intent.json  github-pr-status.intent.json  intent.schema.json  kernel-status.intent.json  mcp-e2b-run-code.intent.json  mcp-fetch.intent.json  mcp-git-diff.intent.json  mcp-git-log.intent.json  mcp-git-status.intent.json  mcp-github-get-issue.intent.json  mcp-github-list-issues.intent.json  mcp-markitdown.intent.json  mcp-mem0-add.intent.json  mcp-mem0-delete.intent.json  mcp-mem0-get.intent.json  mcp-mem0-search.intent.json  mcp-playwright-navigate.intent.json
config/: llm-catalog.toml  mcp-allowlist.toml.example  mcp-servers.wsl.example.json  rmng-config.toml.example  rmngd.service  rmngd.service.in  wsl-kernel.config.example  wsl-kernel.config.slim.example  wsl.conf.example  wslconfig.example
docs/: ARCHITECTURE.md  DECISIONS.md  INDEX.md  INTEGRATION-ROADMAP.md  INTEGRATION-STRATEGY.md  PLAN-AGENTS-MCP-SKILLS.md  REQUIREMENTS.md  ROADMAP.md  VISION.md  daily-workflow.md  llm-configuration.md  llm-provider-matrix.md  llm-providers.md  setup.md
docs/benchmarks/: phase2-ccache-20260630.txt  phase2-validation-20260630.md
docs/decisions/: ADR-015-intent-schema-decoupling.md  ADR-017-multi-level-agent-architecture.md  ADR-018-session-lifecycle.md  ADR-019-licensing-and-layering.md  ADR-020-linux-aligned-runtime-hardening.md  ADR-021-cost-governance.md
docs/experiments/: phase3-build-20260630.md  phase3-validation-20260630.md  phase5-ipc-20260630.md  phase5-runtime-20260630.md  phase5-scaffold-20260630.md  phase5-sprint-20260630.md
docs/integrations/: README.md  TEMPLATE.md  browser-research-usage.md  code-workflow-usage.md  context7-rejected.md  e2b-mcp.md  end-to-end-workflow.md  evaluation-usage.md  git-mcp.md  github-mcp-expansion.md  github-mcp.md  live-llm-chain-quirks.md  live-llm-orchestration.md  markitdown-mcp.md  mcp-fetch.md  mem0-mcp.md  memory-usage.md  operations-usage.md  orchestration-usage.md  playwright-mcp.md  promptfoo-patterns.md  recommended-agent-setups.md  research-curator.md  sandbox-usage.md  security-mcp-usage.md  superpowers-skill.md  testing-usage.md  web-research-usage.md
dotfiles/: bashrc.ccache.snippet  bashrc.rmng.snippet
integrations/: README.md
integrations/dev/: README.md  git.json  github.json  kernel.json
patches/: 0001-rmng-boot-banner.patch  README.md  series
scripts/: apply-patches.sh  benchmark-ccache.sh  build.sh  check-dev-prerequisites.sh  dev-environment-setup.sh  export-slim-config.sh  install-rmng.sh  kernel-env.sh  llm-provider-matrix.sh  make-config-example.sh  probe-anthropic-minimal.py  probe-xai.py  rebuild-with-patches.sh  register-mcp-tool.sh  setup-dev-mcp.sh  setup-llm-secret.sh  setup-mcp-allowlist.sh  setup-rmng-home.sh  slim-config.sh  status.sh  workspace-setup.sh
scripts/lib/: allowlist-edit.py
skills/: INDEX.md
skills/browser-research/: SKILL.md
skills/code-execution/: SKILL.md
skills/doc-ingestion/: SKILL.md
skills/doc-summarization/: SKILL.md
skills/git-workflow/: SKILL.md
skills/github-workflow/: SKILL.md
skills/improvement-loop/: SKILL.md
skills/kernel-build/: SKILL.md
skills/kernel-config/: SKILL.md
skills/mcp-integration/: SKILL.md
skills/memory-management/: SKILL.md
skills/output-validation/: SKILL.md
skills/phase-gates/: SKILL.md
skills/regression-check/: SKILL.md
skills/research-workflow/: SKILL.md
skills/run-tests/: SKILL.md
skills/self-critique/: SKILL.md
skills/source-evaluation/: SKILL.md
skills/spec-compliance/: SKILL.md
skills/tdd-discipline/: SKILL.md
skills/test-coverage-check/: SKILL.md
skills/validate-output/: SKILL.md
skills/web-research/: SKILL.md
