[workspace]
resolver = "2"
members = [
    "rmng-core",
    "rmng-mcp",
    "rmng-nervous",
    "rmngd",
    "rmng-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-RMNG-Proprietary"
repository = "https://github.com/Ishwanku/RMNG-OS"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "signal", "net", "time"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde_yaml = "0.9"
jsonschema = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
nix = { version = "0.29", features = ["process", "resource"] }
