[package]
name = "rmng-cli"
description = "RMNG-OS CLI"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rmng"
path = "src/main.rs"

[dependencies]
rmng-core = { path = "../rmng-core" }
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
