[package]
name = "rmng-cli"
description = "RMNG-OS CLI"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rmng"
path = "src/main.rs"

[dependencies]
rmng-core = { path = "../rmng-core" }
rmng-nervous = { path = "../rmng-nervous" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
chrono.workspace = true

[dev-dependencies]
uuid = { workspace = true }
serde_json.workspace = true
