[package]
name = "rmng-core"
description = "RMNG-OS agent runtime library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rmng-mcp = { path = "../rmng-mcp" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
toml.workspace = true
jsonschema.workspace = true
sha2.workspace = true
