[package]
name = "rmng-mcp"
description = "RMNG-OS MCP stdio bridge — spawns allowlisted servers and proxies tools/call"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
nix = { workspace = true, features = ["process"] }
libc = "0.2"