[package]
name = "rmng-nervous"
description = "RMNG-OS nervous system adapters (BYO-LLM)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rmng-core = { path = "../rmng-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde_yaml.workspace = true
