[package]
name = "rmngd"
description = "RMNG-OS system daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rmngd"
path = "src/main.rs"

[dependencies]
rmng-core = { path = "../rmng-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
